添加格式化工具

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0"
   }
 }
