--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "clsx": "^1.1.1",
+    "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
