--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "ahooks": "^2.10.6",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
