--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "ahooks": "^2.10.6",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
-    "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
