--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
