feat: 添加代码高亮types（当前需指定版本）

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^11.0.5",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0"
   }
